--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "aws-cdk": "^2.33.0",
     "aws-cdk-lib": "^2.33.0",
     "constructs": "^10.1.56",
+    "exbuild": "^0.2.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@types/uuid": "^8.3.4",
+    "uuid": "^9.0.0"
   }
 }
