--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/aws-lambda": "^8.10.109",
     "@types/uuid": "^8.3.4",
+    "aws-sdk": "^2.1263.0",
     "uuid": "^9.0.0"
   }
 }
